fix bug
解决bug